# pimg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  pimg.html  pyproject.toml  search.js  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.devcontainer/features/pygobject-deps/: devcontainer-feature.json  install.sh
.github/: dependabot.yml
.github/workflows/: docs.yml  release.yml  test.yml
pimg/: main.html  main.py  pimg.html  pimg.py
tests/: test_pimg.py
