[metadata]
name = pimg
version = attr: pimg.__version__
description = Save an image in clipboard
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/pimg
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    PyGObject>=3.42.0
    PyGObject-stubs>=0.0.7
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    pimg = pimg.main:main

[options.extras_require]
dev =
    pre-commit
    setuptools>=46.4.0
    types-setuptools
    wheel

[options.package_data]
pimg = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
